--- a/jaldoot/package.json
+++ b/jaldoot/package.json
@@ -12,14 +12,17 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/react-native-vector-icons": "^6.4.14",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.10.5",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "sharing": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
